<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/dark">

    <androidx.cardview.widget.CardView
        android:id="@+id/btnPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="52dp"
        app:contentPadding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/ic_round_power_settings_new_24"
            app:tint="@color/white"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="239dp"
            android:contentDescription="@string/power" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnSpin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                app:cardBackgroundColor="@color/dark"
                app:cardCornerRadius="60dp"
                app:contentPadding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:srcCompat="@drawable/ic_baseline_rotate_90_degrees_ccw_24"
                    app:tint="@color/white"
                    android:contentDescription="@string/spin" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/btnTurnLeft"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/btnSpin"
                app:layout_constraintEnd_toStartOf="@+id/btnSpin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnSpin"
                app:srcCompat="@drawable/ic_round_keyboard_arrow_left_24"
                android:contentDescription="@string/turn_left" />

            <ImageView
                android:id="@+id/btnTurnRight"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/btnSpin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnSpin"
                app:layout_constraintTop_toTopOf="@+id/btnSpin"
                app:srcCompat="@drawable/ic_round_keyboard_arrow_right_24"
                android:contentDescription="@string/turn_right" />

            <ImageView
                android:id="@+id/btnMoveOn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btnSpin"
                app:layout_constraintEnd_toEndOf="@+id/btnSpin"
                app:layout_constraintStart_toStartOf="@+id/btnSpin"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_round_keyboard_arrow_up_24"
                android:contentDescription="@string/move_on" />

            <ImageView
                android:id="@+id/btnGoBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnSpin"
                app:layout_constraintStart_toStartOf="@+id/btnSpin"
                app:layout_constraintTop_toBottomOf="@+id/btnSpin"
                app:srcCompat="@drawable/ic_round_keyboard_arrow_down_24"
                android:contentDescription="@string/go_back" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bluetooth_connection"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnPower"
        app:layout_constraintStart_toStartOf="@+id/btnPower"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPower">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="64dp"
                android:layout_height="48dp"
                app:cardCornerRadius="50dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Button 1"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>